--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -14,6 +14,24 @@
     <!-- Your code goes here -->
 
 
+    <div class="maincontainer">
+      <header><strong>$167</strong> still needed for this project</header>
+        <div class="arrow"></div>
+      <div class="colorstatus"></div>
+      <section class="donate-box">
+        <p><b><span style="color:#EF5F3C">Only 3 days left</span></b> to fund this project.<br><br>Join the <strong>42</strong> other donors who have already supported this project. Every dollar helps.</p><br />
+        <form action="">
+          <input type="text" class="amount" placeholder="  $ 50">
+          <input type="submit" class="give" value="Give Now">
+        </form>
 
+      <a class="why" href="https://www.google.com/search?rlz=1C5ACMJ_enUS520US520&ei=QIzWW46rGoW-zwKZm5zIBA&q=why+give+%2450&oq=why+give+%2450&gs_l=psy-ab.3..0i22i30l3.7477.8515..9517...0.0..0.102.395.1j3......0....1..gws-wiz.......0j0i71j0i67.g9uEI7gsnUA" target="_blank">Why give $50?</a>
+
+      </section>
+      <footer class="footer">
+        <button class="later">Save for later</button>
+        <button class="friends">Tell your friends</button>
+      </footer>
+    </div>
   </body>
 </html>
